refactor(scheduling): normalize grouped shifts response